# CC2511-A2-21

./: .gitignore  CMakeLists.txt  README.md  drv8825.c  drv8825.h  main.c  menu.c  menu.h  pico.c  pico.h  queue.c  queue.h  terminal.h  utils.h
feed_serial/: .gitignore  feed_serial.py  index.js  package.json  predefined_images.js  serial.js  utils.js  visualise.html
